tests/ui/discriminant.stderr
error[E0552]: unrecognized representation hint
 --> tests/ui/discriminant.rs:6:8
  |
6 | #[repr(A)]
  |        ^
  |
  = help: valid reprs are `Rust` (default), `C`, `align`, `packed`, `transparent`, `simd`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`
  = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html?highlight=repr#representations>

error[E0732]: `#[repr(inttype)]` must be specified for enums with explicit discriminants and non-unit variants
  --> tests/ui/discriminant.rs:12:1
   |
12 | enum MissingIntegerRepr<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
13 |     A(PhantomData<T>) = 0,
   |                         - explicit discriminant on non-unit variant specified here

error[E0732]: `#[repr(inttype)]` must be specified for enums with explicit discriminants and non-unit variants
  --> tests/ui/discriminant.rs:18:1
   |
18 | enum MissingIntegerReprC<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
19 |     A(PhantomData<T>) = 0,
   |                         - explicit discriminant on non-unit variant specified here
